Fix code wrapping inside lists

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -156,6 +156,8 @@ strong code {
   font-size: .88em
 }
 
+.post-content>ul>li>pre,
+.post-content>ol>li>pre,
 .post-content>.highlight>pre,
 .post-content>pre {
   display: grid;
